# chormaeleon_fileupload

./: .gitignore  Cargo.toml  README.md  Trunk.toml  config_local.json  copy_config.sh  index.html
js/custom/: README  tinymce_content.js
src/: main.rs
src/components/: admin_only.rs  contribution_list.rs  delete_modal.rs  iframe.rs  jwt_context.rs  loading_spinner.rs  material.rs  mod.rs  modal.rs  project_list.rs  submission_list.rs  upload.rs
src/components/material/: audio.rs  material_modals.rs  mod.rs  other.rs  other_and_all.rs  sheet.rs  video.rs
src/components/progress/: mod.rs  progress.rs
src/components/project/: list.rs  mod.rs  modals.rs  project_list.rs  project_modals.rs
src/components/submission/: details.rs  list.rs  mod.rs  update.rs
src/pages/: contribution.rs  home.rs  mod.rs  project.rs  projects.rs
src/service/: material.rs  mod.rs  project.rs  submission.rs
src/utilities/: callback.rs  date.rs  mod.rs
src/utilities/requests/: fetch.rs  mod.rs  xmlhttp_post_request.rs
xmlhttp/: Cargo.toml
xmlhttp/src/: lib.rs  xmlhttp_post_request.rs
