[package]
name = "chormaeleon_fileupload"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "xmlhttp"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "^0.21"
gloo-file = "0.3"
gloo-utils = "0.2"
gloo-console = "0.3"
gloo-dialogs = "0.2"
serde = "1.0"
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
time = { version = "0.3", features = [
  "formatting",
  "local-offset",
  "macros",
  "parsing",
  "serde-human-readable",
  "wasm-bindgen",
] }
wasm-bindgen = { version = "^0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
xmlhttp = { path = "./xmlhttp" }
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"


[dependencies.web-sys]
version = "0.3"
features = [
  "HtmlAnchorElement",
  "HtmlDocument",
  "HtmlFormElement",
  "HtmlIFrameElement",
  "HtmlSelectElement",
]

[profile.release]
lto="fat"
opt-level = "z"