[package]
name = "xmlhttp"
version = "0.1.0"
edition = "2021"

[lib]
name = "xmlhttp"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3"
wasm-bindgen = { version = "^0.2", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4"


[dependencies.web-sys]
version = "0.3"
features = [
  "Blob",
  "Element",
  "ErrorEvent",
  "File",
  "FormData",
  "Headers",
  "HtmlAnchorElement",
  "HtmlFormElement",
  "HtmlIFrameElement",
  "HtmlInputElement",
  "HtmlProgressElement",
  "Location",
  "Storage",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Url",
  "UrlSearchParams",
  "Window",
  "XmlHttpRequest",
  "XmlHttpRequestUpload"
  ]

